--- a/views/partials/form-wrong.ejs
+++ b/views/partials/form-wrong.ejs
@@ -5,6 +5,8 @@
     <img src="/img/icon-close.svg" alt="close" width="25" height="25" />
   </div>
   <div class="form-inner">
+      <h2 class="wrong">Sorry, that answer is wrong.</h2>
+      <p class="wrong-prompt">Please try another answer.</p>
     <h3 class="question"><%= locals.q[id] %></h3>
     <label for="question_<%= id %>">Enter Your Answer</label>
     <input placeholder="lowercase" name="question_<%= id %>" id="question_<%= id %>" />
