--- a/views/puzzle-right.ejs
+++ b/views/puzzle-right.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header.ejs'); %>
 <h1>Easter Puzzle 2024</h1>
 
-<%- include('partials/form.ejs'); %>
+<%- include('partials/form-right.ejs'); %>
 
 <%- include('partials/pieces.ejs'); %>
 <ul>
