--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,18 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="robots" content="noindex">
     <title>Happy Easter 2024!</title>
-  <link rel="stylesheet" type="text/css" href="/style.css">
-  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-  <script>
-   $( document ).ready(function() {
-        console.log( "document loaded" );
-      $('#form .close').on('click', function(){
-        $('#form').fadeOut();
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/style.css">
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script>
+    $( document ).ready(function() {
+          console.log( "document loaded" );
+        $('.close').on('click', function(){
+          $('#form').fadeOut();
+          $('#answer-response-container').fadeOut();
+        });
+        $('.puzzle-cover').on('click', function(){
+          let pieces = $('.piece').length;
+          console.log("pieces: ",pieces);
+          if (pieces === 0) {
+            $(this).fadeOut('slow');
+          }
+        });
       });
-      $('.wrong, .wrong-prompt, .right, .right-prompt').on('click', function(){
-        $(this).fadeOut();
-      });
-    });
     </script>
   </head>
   <body>
