--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -25,6 +25,9 @@
             $(this).fadeOut('slow');
           }
         });
+        $('.direct-link-container').on('click', function(){
+          $(this).children().toggle();
+        });
       });
     </script>
   </head>
