--- a/views/intro.ejs
+++ b/views/intro.ejs
@@ -3,9 +3,9 @@
 
 <section class="intro-message">
     
-    <p>Clues have been hidden in Easter eggs around the premises. Each clue contains a QR code which will bring you to a page where you can enter your answer. If correct, pieces will be removed form the puzzle. To solve the puzzle, you will need to find 20 clues, answer the associated questions correctly.</p>
+    <p>Clues have been hidden in Easter eggs around the premises. Each clue contains a QR code which will bring you to a page where you can enter your answer. If correct, pieces will be removed from the puzzle. To solve the puzzle, you will need to find 20 clues and answer the associated questions correctly.</p>
 
-    <p><strong>Go find some clues to start the puzzle continue. Good luck!</strong></p>
+    <h3><strong>Go find some clues to start the puzzle continue. Good luck!</strong></h3>
 </section>
 <%- include('partials/pieces.ejs'); %>
   
