--- a/views/intro.ejs
+++ b/views/intro.ejs
@@ -3,11 +3,12 @@
 
 <section class="intro-message">
     
-    <p>Clues have been hidden in Easter eggs around the premises. Each clue contains a QR code which will bring you to a page where you can enter your answer. If correct, pieces will be removed from the puzzle. To solve the puzzle, you will need to find 20 clues and answer the associated questions correctly.</p>
+    <p>Clues have been hidden in Easter eggs around the premises. Each clue contains a QR code which will bring you to a page where you can enter your answer. If correct, pieces will be removed from the puzzle. To solve the puzzle, you will need to find all 20 clues and answer the associated questions correctly. <em>NOTE: you may use the Google.</em></p>
 
-    <h3><strong>Go find some clues to start the puzzle continue. Good luck!</strong></h3>
+    <h3><strong>Go find some clues to start the puzzle. Good luck!</strong></h3>
 </section>
 <%- include('partials/pieces.ejs'); %>
-  
+
+<%- include('partials/direct-link-container.ejs'); %>
 
 <%- include('partials/footer.ejs'); %>
