--- a/views/partials/direct-link-container.ejs
+++ b/views/partials/direct-link-container.ejs
@@ -1,3 +1,5 @@
+<p class="show-menu-label">SHOW HIDDEN MENU</p>
+<p class="hide-menu-label">HIDE HIDDEN MENU</p>
 <div class="direct-link-container">
     <ul>
       <li><a href="/clue/0/">Clue 0</a></li>
@@ -29,7 +31,8 @@
       <li><a href="/clue/18/">Clue 18</a></li>
       <li><a href="/clue/19/">Clue 19</a></li>
     </ul>
-    
-    <p><a href="/reset/">Reset Puzzle</a></p>
+    <ul>
+      <li><a href="/reset/">Reset Puzzle</a></li>
+    </ul>
     </div>
     
